--- a/mytsapp/styles/globals.css
+++ b/mytsapp/styles/globals.css
@@ -4,6 +4,8 @@
 html,
 body {
   padding: 0;
+  min-height: 100%;
+  max-height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
